css is now loaded from the lambda function instead of s3

--- a/main.css
+++ b/main.css
@@ -6,7 +6,12 @@
     a:visited {
         color: black;
     }
-    
+
+    u.dotted{
+  	border-bottom: 1px dashed #999;
+  	text-decoration: none; 
+    }
+
     img {
         max-width: 800px;
     }
