--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 <style type="text/css">
     a:link {
         color: gray;
@@ -14,13 +13,15 @@
     }
     
     body {
-        height: 50%;
-        background: #fff;
-        margin-top: 50px;
-        margin-bottom: 50px;
         padding: 0;
-        font-family: Courier New, Fixed;
-        font-size: 14px;
+        font-family: Courier, sans-serif;
+        font-size: 15px;
         color: #555;
     }
+    
+    td, th {
+        font-family: Courier, sans-serif;
+        text-align: center;
+    }
+    
 </style>
