--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 <style type="text/css">
+    @import url('https://fonts.googleapis.com/css?family=Nunito');
     a:link {
         color: gray;
     }
@@ -7,15 +8,24 @@
         color: gray;
     }
 
+    #desc {
+        font-family: 'Nunito', sans-serif;
+    }
+
+    table {
+        max-width: 1200px; 
+    }
+
     u.dotted {
       	border-bottom: 0px dashed #999;
       	text-decoration: none; 
     }
     
     td {
-        font-family: monospace;	
+        font-family: monospace;
         font-size: 18px;
         color: #555;
+        padding: 5px;
     }
 
     .button {
@@ -30,7 +40,8 @@
         border: none;
         padding: 0;
         background: none;
-        font-family: monospace;	
+        font-family: monospace;
+        /*font-family: 'Special Elite', cursive;*/
         background-color: white;
         cursor: pointer;
         width: 100%;
@@ -40,13 +51,13 @@
     }
     
     .active, .collapsible:hover {
-      background-color: white;
+        background-color: white;
     }
     
     .content {
-      padding: 0 10px;
-      display: none;
-      overflow: hidden;
-      background-color: white;
+        padding: 0 10px;
+        display: none;
+        overflow: hidden;
+        background-color: white;
     }
 </style>
